feat: delete comment

--- a/index.html
+++ b/index.html
@@ -9,156 +9,169 @@
 
 <body>
 
-  <div class="wrapper">
-	<header class="header">
-      <nav class="container_header">
-	    <ul class="flex-nav">
-		  <li><a href="#contact" class="header_a">CONTACT</a></li>
-		  <li><a href="#key_strengths" class="header_a">KEY STRENGTHS</a></li>			
-		  <li><a href="#about_me" class="header_a">ABOUT ME</a></li>
-		  <li><a href="#skills" class="header_a">SKILLS</a></li>
-		  <li><a href="#education" class="header_a">EDUCATION</a></li>
-		  <li><a href="#experience" class="header_a">EXPERIENCE</a></li>
-		  <li><a href="#language" class="header_a">LANGUAGE</a></li>
+  <header class="header">
+    <nav class="container_header">
+	  <ul class="flex-nav">
+	    <li><a href="#contact" class="header_a">CONTACT</a></li>
+	    <li><a href="#key_strengths" class="header_a">KEY STRENGTHS</a></li>			
+	    <li><a href="#about_me" class="header_a">ABOUT ME</a></li>
+	    <li><a href="#skills" class="header_a">SKILLS</a></li>
+	    <li><a href="#education" class="header_a">EDUCATION</a></li>
+	    <li><a href="#experience" class="header_a">EXPERIENCE</a></li>
+	    <li><a href="#language" class="header_a">LANGUAGE</a></li>
+	  </ul>
+	</nav>
+  </header>
+
+  <main class="main_row">
+	<section class="container_left">
+	  <div class="foto_border">
+	    <img class="foto" src="img/12.jpg" alt="Marina Matysheva">
+	  </div> 
+
+	  <div class="foto_fio">
+
+		<h1 class="marina">Marina Matysheva</h1>
+		<div id="contact" class="left_line">
+	      <div class="left_orange"></div>
+		  <h2 class="left_grey">CONTACT</h2>
+    	</div>
+
+		<ul class="contact">
+    	  <li><a href="mailto:marina.matysheva@gmail.com" target="blank">marina.matysheva@gmail.com</a></li>
+		  <li><a href="tel:+375297182648" target="blank">+37529 718 26 48</a></li>
+		  <li><a href="https://vk.com/m.matysheva" target="blank">m.matysheva</a></li>
+		  <li><a href="https://github.com/gitmumca" target="blank">gitmumca</a></li>
 		</ul>
-	  </nav>
-	</header>
-
-	<main class="block_main">
-	  <div class="main_row">
-	    <section class="container_left">
-		  <div class="foto_border">
-		    <img class="foto" src="img/12.jpg" alt="Marina Matysheva">
-		  </div> 
-		  <div class="foto_fio">
-			<h1 class="marina">Marina Matysheva</h1>
-			<div id="contact" class="left_line">
-		      <div class="left_orange"></div>
-			  <h2 class="left_grey">CONTACT</h2>
-    		</div>
-		    <ul class="contact">
-    	      <li><a href="mailto:marina.matysheva@gmail.com" target="blank">marina.matysheva@gmail.com</a></li>
-			  <li><a href="tel:+375297182648" target="blank">+37529 718 26 48</a></li>
-			  <li><a href="https://vk.com/m.matysheva" target="blank">m.matysheva</a></li>
-			  <li><a href="https://github.com/gitmumca" target="blank">gitmumca</a></li>
-		    </ul>
 						
-		    <div id="key_strengths" class="left_line">
-			  <div class="left_orange"></div>
-			  <h2 class="left_grey">KEY STRENGTHS</h2>
-		    </div>
+		<div id="key_strengths" class="left_line">
+		  <div class="left_orange"></div>
+		  <h2 class="left_grey">KEY STRENGTHS</h2>
+		</div>
 						
-		    <div class="line_star">
-		      <div class="skill_name">Responsible</div>
-			  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-			  <div class="star_orange">&#9733;</div>
-			  <div class="star_grey">&#9733;</div>
-   		    </div>
-		    <div class="line_star">
-		      <div class="skill_name">Results-oriented</div>
-			  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-			  <div class="star_grey">&#9733;</div>
-			  <div class="star_grey">&#9733;</div>
-		    </div>
-		    <div class="line_star">
-		   	  <div class="skill_name">Self-motivated</div>
-			  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-			  <div class="star_orange">&#9733;</div>
-			  <div class="star_grey">&#9733;</div>
-		    </div>
-		    <div class="line_star">
-		  	  <div class="skill_name">Learn quickly</div>
-			  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-			  <div class="star_grey">&#9733;</div>
-			  <div class="star_grey">&#9733;</div>
-		    </div>
-		    <div class="line_star">
-		  	  <div class="skill_name">Sociable</div>
-			  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-			  <div class="star_orange">&#9733;</div>
-			  <div class="star_orange">&#9733;</div>
-		    </div>
-		    <br><br>
-		  </div>
+		<div class="line_star">
+		  <div class="skill_name">Responsible</div>
+		  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+		  <div class="star_orange">&#9733;</div>
+		  <div class="star_grey">&#9733;</div>
+   		</div>
 
-		</section>	
+		<div class="line_star">
+		  <div class="skill_name">Results-oriented</div>
+		  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+		  <div class="star_grey">&#9733;</div>
+		  <div class="star_grey">&#9733;</div>
+		</div>
 
-		<div class="vertical"></div>
+		<div class="line_star">
+		  <div class="skill_name">Self-motivated</div>
+		  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+		  <div class="star_orange">&#9733;</div>
+		  <div class="star_grey">&#9733;</div>
+		</div>
 
-		<section class="container_right">
-		  <div class="about">
-			<div id="about_me" class="right_line">
-		      <h2 class="right_grey">ABOUT ME</h2>
-			  <div class="right_orange"></div>
-			</div>
-			<div class="about_text">
-			  <p>I love programming and have always been interested in psychology. Developing technical skills and communicating successfully with people are equally important to me</p>
-			  <p>My experience in OOP with the automating business processes of an enterprise and accounting gives me a good basis for learning Front-End technology. And my desire to develop helps to find my own path</p>
-			</div>
-			<div id="skills" class="right_line">
-			  <h2 class="right_grey">SKILLS</h2>
-			  <div class="right_orange"></div>
-			</div>
-			<ul class="skill_li">
-			  <li>1С Enterprise 8.2, SQL, XML, COM</li>
-			  <li>Borland Delphi 6, C++ Builder</li>
-			  <li>HTML5, CSS3, JavaScript Basics</li>
-			  <li>Git, SublimeText, VSCode</li>
-			</ul>
-			<div id="education" class="right_line">
-			  <h2 class="right_grey">EDUCATION</h2>
-			  <div class="right_orange"></div>
-			</div>
-			<ul class="education_li">
-			  <li><a href="https://www.psu.by/en/" class="educ_a" target="blank">Polotsk State University</a></li>
-			  <li>Information Technology Faculty</li>
-			  <li>Specialization: Computing systems and Networks</li>
-			  <li><a href="https://learn.epam.com/" class="educ_a" target="blank">EPAM</a></li>
-			  <li>Software Testing Introduction</li>
-			  <li>WebDriver (in process)</li>
-			</ul>
-			<div id="experience" class="right_line">
-			  <h2 class="right_grey">EXPERIENCE</h2>
-			  <div class="right_orange"></div>
-			</div>
-			<ul class="experience_li">
-			  <li class="exp_year">2006 – 2021 1C Enterprise</li>
-			  <li>Development software for automating business processes and accounting</li>
-			</ul>
-			<div id="code" class="right_line">
-			  <h2 class="right_grey">CODE EXAMPLE</h2>
-			  <div class="right_orange"></div>
-			</div>
-			<img class="code" src="img/code.jpg" alt="">
-			<div id="language" class="right_line">
-			  <h2 class="right_grey">LANGUAGE</h2>
-			  <div class="right_orange"></div>
-			</div>
-			<ul class="language_li">
-			  <li>Russian - native</li>
-			  <li>English - A2 (B1 in process)</li>
-			</ul>
-		  </div>
-		</section>
+		<div class="line_star">
+		  <div class="skill_name">Learn quickly</div>
+		  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+		  <div class="star_grey">&#9733;</div>
+		  <div class="star_grey">&#9733;</div>
+		</div>
+
+		<div class="line_star">
+		  <div class="skill_name">Sociable</div>
+		  <div class="star_list">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+		  <div class="star_orange">&#9733;</div>
+		  <div class="star_orange">&#9733;</div>
+		</div>
+
+	    <br><br>
+
+   	  </div> 
+	</section>	
+
+	<div class="vertical"></div>
+
+	<section class="container_right">
+	  <div class="about">
+		<div id="about_me" class="right_line">
+	      <h2 class="right_grey">ABOUT ME</h2>
+		  <div class="right_orange"></div>
+		</div>
+		<div class="about_text">
+		  <p>I love programming and have always been interested in psychology. Developing technical skills and communicating successfully with people are equally important to me</p>
+		  <p>My experience in OOP with the automating business processes of an enterprise and accounting gives me a good basis for learning Front-End technology. And my desire to develop helps to find my own path</p>
+		</div>
+		<div id="skills" class="right_line">
+		  <h2 class="right_grey">SKILLS</h2>
+		  <div class="right_orange"></div>
+		</div>
+		<ul class="skill_li">
+		  <li>1С Enterprise 8.2, SQL, XML, COM</li>
+		  <li>Borland Delphi 6, C++ Builder</li>
+		  <li>HTML5, CSS3, JavaScript Basics</li>
+		  <li>Git, SublimeText, VSCode</li>
+		</ul>
+		<div id="education" class="right_line">
+		  <h2 class="right_grey">EDUCATION</h2>
+		  <div class="right_orange"></div>
+		</div>
+		<ul class="education_li">
+		  <li><a href="https://www.psu.by/en/" class="educ_a" target="blank">Polotsk State University</a></li>
+		  <li>Information Technology Faculty</li>
+		  <li>Specialization: Computing systems and Networks</li>
+		  <li><a href="https://learn.epam.com/" class="educ_a" target="blank">EPAM</a></li>
+		  <li>Software Testing Introduction</li>
+		  <li>WebDriver (in process)</li>
+		</ul>
+		<div id="experience" class="right_line">
+		  <h2 class="right_grey">EXPERIENCE</h2>
+		  <div class="right_orange"></div>
+		</div>
+		<ul class="experience_li">
+		  <li class="exp_year">2006 – 2021 1C Enterprise</li>
+		  <li>Development software for automating business processes and accounting</li>
+		</ul>
+		<div id="code" class="right_line">
+		  <h2 class="right_grey">CODE EXAMPLE</h2>
+		  <div class="right_orange"></div>
+		</div>
+		<div class="code">
+			<p class="textTask">In this kata you have to implement a base converter, which converts positive integers between arbitrary bases / alphabets</p>
+			<p>function decToTarget(numDec, target) {</p>
+			<p class="tab">return (numDec==0) ? '' : (decToTarget(Math.trunc(numDec/target.length), target) + target[numDec%(target.length)]);</p>
+			<p>function convert(input, source, target) {</p>
+			<p class="tab">let numDec = input.split('').reverse().reduce((numDec,el,i) => numDec+=source.indexOf(el) * Math.pow((source.length),i), 0);</p>
+			<p class="tab">return (numDec==0) ? target[numDec] : decToTarget(numDec, target);</p>
+			<p>}</p>
+		</div>
+<!--		<img class="code" src="img/code.jpg" alt="">     -->
+		<div id="language" class="right_line">
+		  <h2 class="right_grey">LANGUAGE</h2>
+		  <div class="right_orange"></div>
+		</div>
+		<ul class="language_li">
+		  <li>Russian - native</li>
+		  <li>English - A2 (B1 in process)</li>
+		</ul>
 	  </div>
-	</main>
-		
-	<footer>
-	  <div class="container_footer">
-		<a href="https://rs.school/js/" target="blank">
-	  	  <img class="rs_school" src="img/rs_school_js.svg" alt="">
-		</a>
-		<div class="f_2021">2021</div>
-		<a href="#top" class="button">
-		  <div class="container_home">
-		    <div class="home_text">Home</div>
-		 	<img class="icon_home" src="img/home.png" alt="">	
-		  </div>
-		</a>
-	  </div>
-	</footer>
+	</section>
 
-  </div>
+  </main>
+
+  <footer>
+    <div class="container_footer">
+      <a href="https://rs.school/js/" target="blank">
+	    <img class="rs_school" src="img/rs_school_js.svg" alt="rs_school">
+	  </a>
+	  <div class="f_2021">2022</div>
+	  <a href="#top" class="button">
+	    <div class="container_home">
+	      <div class="home_text">Home</div>
+	 	  <img class="icon_home" src="img/home.png" alt="home">	
+	    </div>
+	  </a>
+	</div>
+  </footer>
 
 </body>
 </html>
